# esp_playground

./: .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
docs/: readme.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  display.c  display.h  hwsetup.h  networking.c  networking.h  radio433.h  temp_sensors.c  temp_sensors.h  temp_sensors2.c  test_rf24.cpp  test_task.c  test_task.h
